# workspace

./: .gitignore  2d_standard_map_lyapunov.py  README.md  data.txt  equinox-gym.py  equinox_optax.py  eqx-dqn.py  eqx-optax.py  eqx-pqn.py  eqx_pqn.py  fdm_diffusion.py  flax-dqn.py  gymnax-eqx-pqn.py  gymnax-flashbax.py  jax-dqn-dep.py  jax-dqn.py  jax-neural-network.py  jaxmarl-eqx-pqn.py  lorenz.jl  manim_lorenz.py  marl_eqx_pqn.py  neural_ode.py  pyproject.toml  pytorch-dqn-dep.py  pytorch-dqn.py  replax.py  rk.py  rk23.py  rk45.py  scipy_45.py  tmp.json  tmp.py
budget-tool/: main.py  test.ipynb
gif/: gif.py  gif_mobile.py
jax-neural-network/: henon_heiles.py  jit-learning.ipynb  lorenz.ipynb  neural_network.py  quickstart.ipynb  test.py
jax-physics/: 2d-map-lyapunov.ipynb
manimations/: scene.py
models/: marl.eqx
wandb/: latest-run
wandb/run-20250717_144340-cxdlozd6/: run-cxdlozd6.wandb
wandb/run-20250717_144340-cxdlozd6/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250717_144557-zgblwmg8/: run-zgblwmg8.wandb
wandb/run-20250717_144557-zgblwmg8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250717_144637-c127d4g7/: run-c127d4g7.wandb
wandb/run-20250717_144637-c127d4g7/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250717_144657-6u13rfin/: run-6u13rfin.wandb
wandb/run-20250717_144657-6u13rfin/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250717_145519-g6sh68pi/: run-g6sh68pi.wandb
wandb/run-20250717_150431-29pqqvlw/: run-29pqqvlw.wandb
(+9 files in other folders)
