[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "earthengine-api>=1.5.5",
    "imageio>=2.37.0",
    "jax>=0.1.1",
    "manim>=0.19.0",
    "matplotlib>=3.10.0",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "tabula-py>=2.10.0",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
