[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.11.12",
    "gymnax>=0.0.8",
    "jax>=0.1.1",
    "manim>=0.19.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "optax>=0.2.4",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "tabula-py>=2.10.0",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
