[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.89",
    "equinox>=0.11.12",
    "flashbax>=0.1.3",
    "flax>=0.10.4",
    "gymnax>=0.0.8",
    "jax>=0.1.1",
    "jaxmarl>=0.0.2",
    "manim>=0.19.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "optax>=0.2.4",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "stable-baselines3>=2.6.0",
    "tabula-py>=2.10.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.26",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
